# Function for checking the nan values

--- a/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
+++ b/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHx4BEHrfvKCDZ8PuW8Vic",
+      "authorship_tag": "ABX9TyOXVEiEVJctDRgoArrCWTbt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "zOK4ufWquMc6"
       },
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "m8mNsXJMv0Vg"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "YdBEotLdvR4g"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -77,9 +77,9 @@
           "height": 256
         },
         "id": "fQCBMzNivsXx",
-        "outputId": "16b0bf45-1a78-44fd-8ea1-03e9c39c9041"
+        "outputId": "e657d77e-aaec-4591-d217-09517fc2d2e5"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-10f6ce82-e30b-4765-b862-72c034fb06c6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a4539892-8355-4667-8df3-dc25a258c65d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -294,7 +294,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-10f6ce82-e30b-4765-b862-72c034fb06c6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a4539892-8355-4667-8df3-dc25a258c65d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -346,12 +346,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-10f6ce82-e30b-4765-b862-72c034fb06c6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a4539892-8355-4667-8df3-dc25a258c65d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-10f6ce82-e30b-4765-b862-72c034fb06c6');\n",
+              "        const element = document.querySelector('#df-a4539892-8355-4667-8df3-dc25a258c65d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -371,8 +371,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-18a78b8a-d4b2-4c43-8932-224e3c7c653c\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-18a78b8a-d4b2-4c43-8932-224e3c7c653c')\"\n",
+              "    <div id=\"df-b0c63266-e701-4ab1-8be1-d88f2b2fa73b\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b0c63266-e701-4ab1-8be1-d88f2b2fa73b')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -491,7 +491,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-18a78b8a-d4b2-4c43-8932-224e3c7c653c button');\n",
+              "            document.querySelector('#df-b0c63266-e701-4ab1-8be1-d88f2b2fa73b button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -507,7 +507,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ]
     },
@@ -522,9 +522,9 @@
           "height": 350
         },
         "id": "4tZWQQ5svwvk",
-        "outputId": "c983cdae-7ef3-495c-c8ab-711073460c0b"
+        "outputId": "609ae1a8-a55f-4290-edfc-7b93e919b71e"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -594,7 +594,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d9e909c1-9a4b-4f93-a762-ee6d2cb0b8a6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-da372da1-c73b-4146-9d1c-805151953b19\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -836,7 +836,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d9e909c1-9a4b-4f93-a762-ee6d2cb0b8a6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-da372da1-c73b-4146-9d1c-805151953b19')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -888,12 +888,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d9e909c1-9a4b-4f93-a762-ee6d2cb0b8a6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-da372da1-c73b-4146-9d1c-805151953b19 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d9e909c1-9a4b-4f93-a762-ee6d2cb0b8a6');\n",
+              "        const element = document.querySelector('#df-da372da1-c73b-4146-9d1c-805151953b19');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -913,8 +913,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-fd36582d-7144-4754-9372-9e6c0f4623de\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fd36582d-7144-4754-9372-9e6c0f4623de')\"\n",
+              "    <div id=\"df-9ff0be56-b046-4d46-940e-d1a001055ddb\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9ff0be56-b046-4d46-940e-d1a001055ddb')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1033,7 +1033,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-fd36582d-7144-4754-9372-9e6c0f4623de button');\n",
+              "            document.querySelector('#df-9ff0be56-b046-4d46-940e-d1a001055ddb button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1048,7 +1048,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     },
@@ -1062,9 +1062,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Raf5WrxwFcI",
-        "outputId": "389d180e-f5eb-4fba-ba92-dc27a2cccb6f"
+        "outputId": "0ef2b473-1384-4dec-a5cb-e832c8468ade"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1089,9 +1089,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rZRkvGROwRn_",
-        "outputId": "03349b85-5498-459c-f332-4ee0e4cee6a5"
+        "outputId": "2c66a69c-3e22-4650-d6b5-111570af72b1"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1101,7 +1101,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -1116,9 +1116,9 @@
           "height": 350
         },
         "id": "vu5vjuymwenL",
-        "outputId": "355cc966-32f4-4ae8-a0e4-ae5955209fe8"
+        "outputId": "a49e25c7-6fb8-42fb-8284-d47091975d13"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1188,7 +1188,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-014f6a57-f428-4328-adf7-fb7fcbbd9448\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-037e5eed-4a1c-43a7-ac62-5eab37b0a497\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1430,7 +1430,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-014f6a57-f428-4328-adf7-fb7fcbbd9448')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-037e5eed-4a1c-43a7-ac62-5eab37b0a497')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1482,12 +1482,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-014f6a57-f428-4328-adf7-fb7fcbbd9448 button.colab-df-convert');\n",
+              "        document.querySelector('#df-037e5eed-4a1c-43a7-ac62-5eab37b0a497 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-014f6a57-f428-4328-adf7-fb7fcbbd9448');\n",
+              "        const element = document.querySelector('#df-037e5eed-4a1c-43a7-ac62-5eab37b0a497');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1507,8 +1507,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-6b9af8ce-5797-440f-8556-cc79b8df9b40\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6b9af8ce-5797-440f-8556-cc79b8df9b40')\"\n",
+              "    <div id=\"df-fe83bfc2-d6fb-4390-8495-f40298c525ba\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fe83bfc2-d6fb-4390-8495-f40298c525ba')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1627,7 +1627,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-6b9af8ce-5797-440f-8556-cc79b8df9b40 button');\n",
+              "            document.querySelector('#df-fe83bfc2-d6fb-4390-8495-f40298c525ba button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1642,7 +1642,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
@@ -1662,9 +1662,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TOK2DcfwxJ6h",
-        "outputId": "6e2a4593-7acb-473e-e398-aacf36d63b31"
+        "outputId": "5d67bdab-3131-46d8-b8ae-20e31f0d1184"
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1688,9 +1688,9 @@
           "height": 458
         },
         "id": "lCwyJ3ovxKbh",
-        "outputId": "2db4890c-e774-4d1a-bd7a-458089db062f"
+        "outputId": "518748d6-f7aa-41fd-fd7e-bfa0d2b26c6a"
       },
-      "execution_count": 16,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1783,7 +1783,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 13
         }
       ]
     },
@@ -1795,13 +1795,13 @@
         "print(object_cols)"
       ],
       "metadata": {
-        "id": "mQmhK4fOx9m3",
-        "outputId": "12a19689-6c88-45eb-fffb-08df95c67134",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mQmhK4fOx9m3",
+        "outputId": "4e0be2cc-71ce-4840-b3a6-2e164b2e63b5"
       },
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1815,13 +1815,45 @@
     {
       "cell_type": "code",
       "source": [
-        "df.drop('ID',axis = 1 , inplace = True)\n"
+        "df.drop('ID',axis = 1 , inplace = True)"
       ],
       "metadata": {
         "id": "Myh28KrvyCWv"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Function for checking the nan values\n",
+        "def check_nan_values(df):\n",
+        "    nan_cols = df.columns[df.isna().any()].tolist()\n",
+        "    return nan_cols\n",
+        "\n",
+        "# Call the check_nan_values function to get the names of columns with NaN values\n",
+        "nan_cols = check_nan_values(df)\n",
+        "\n",
+        "# Print the names of columns with NaN values\n",
+        "print(nan_cols)"
+      ],
+      "metadata": {
+        "id": "AKdaR3Rpy9Yr",
+        "outputId": "8bd88ec1-fb6c-471c-e4e8-10dd39c81dd2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[]\n"
+          ]
+        }
+      ]
     }
   ]
 }
