# Separate features and target

--- a/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
+++ b/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXVEiEVJctDRgoArrCWTbt",
+      "authorship_tag": "ABX9TyP10jy87K+taQtiGujYGYpn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1838,11 +1838,11 @@
         "print(nan_cols)"
       ],
       "metadata": {
-        "id": "AKdaR3Rpy9Yr",
-        "outputId": "8bd88ec1-fb6c-471c-e4e8-10dd39c81dd2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AKdaR3Rpy9Yr",
+        "outputId": "8bd88ec1-fb6c-471c-e4e8-10dd39c81dd2"
       },
       "execution_count": 17,
       "outputs": [
@@ -1854,6 +1854,55 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculating variance and reataining only variables which capture 80% variance\n",
+        "# Select only numeric features for variance calculation\n",
+        "numerical_df = df.select_dtypes(include=np.number)\n",
+        "variances = numerical_df.var()\n",
+        "\n",
+        "threshold = 0.2\n",
+        "low_variance_features = variances[variances <= threshold].index\n",
+        "df_filtered = df.drop(columns=low_variance_features)\n",
+        "df_filtered.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZhrFNA212R3d",
+        "outputId": "9799a790-0901-48ac-c5be-82601e6ad1f5"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(174, 334)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Separate features and target (if applicable)\n",
+        "X = df_filtered.drop(['class'], axis=1)\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "mmc = MinMaxScaler()\n",
+        "X_scaled = mmc.fit_transform(X)"
+      ],
+      "metadata": {
+        "id": "1UjA7XAX3Z4l"
+      },
+      "execution_count": 22,
+      "outputs": []
     }
   ]
 }
