x train and x test

--- a/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
+++ b/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP10jy87K+taQtiGujYGYpn",
+      "authorship_tag": "ABX9TyO7YXPJXfTkD7OwX33Z7QHR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1902,6 +1902,78 @@
         "id": "1UjA7XAX3Z4l"
       },
       "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Perform PCA\n",
+        "\n",
+        "pca = PCA(n_components=0.75)\n",
+        "principal_components = pca.fit_transform(X_scaled)\n",
+        "# Create a new DataFrame with the principal components\n",
+        "pc_df = pd.DataFrame(data=principal_components, columns=[f'PC{i+1}' for i in range(pca.n_components_)])\n",
+        "df_filtered['class'] = df_filtered['class'].replace({'H': 0, 'P': 1})\n",
+        "pc_df['class'] = df_filtered['class']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rOAHtB0G3fOj",
+        "outputId": "40bb0615-ab61-4d0b-f5b1-0f0f732d5caf"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-23-c817c8bf9171>:7: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+            "  df_filtered['class'] = df_filtered['class'].replace({'H': 0, 'P': 1})\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pc_df.shape\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8XEdizBf3vz8",
+        "outputId": "485b1e7b-bc1e-4c35-a2f2-30931f2dce68"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(174, 38)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X = pc_df.drop('class',axis = 1)\n",
+        "y = pc_df['class']\n",
+        "X_train , X_test , y_train , y_test = train_test_split(X,y,train_size = 0.8,random_state = 42)"
+      ],
+      "metadata": {
+        "id": "-lmJYQ_L33LY"
+      },
+      "execution_count": 25,
       "outputs": []
     }
   ]
