--- a/Alzheimer’s_Dementia_Speech.ipynb
+++ b/Alzheimer’s_Dementia_Speech.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRgHQe9LTv3FBFAtEmvF/k",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyNJiyI4TUfmv909Gb+HI4j0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -24,6 +26,33 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/fjadidi2001/AD_Prediction/blob/main/Alzheimer%E2%80%99s_Dementia_Speech.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pydub"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZLPPAR6MyWfH",
+        "outputId": "61de0110-7164-4634-a491-6bc7f4f2d70a"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pydub\n",
+            "  Downloading pydub-0.25.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+            "Downloading pydub-0.25.1-py2.py3-none-any.whl (32 kB)\n",
+            "Installing collected packages: pydub\n",
+            "Successfully installed pydub-0.25.1\n"
+          ]
+        }
       ]
     },
     {
@@ -48,39 +77,106 @@
       "metadata": {
         "id": "J9_mpqWeL2Ck"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "# Step 1: Load Dataset from Google Drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
         "# Define paths to the .tgz files\n",
-        "data_path = '/content/drive/MyDrive/ADRESS021/'\n",
+        "data_path = '/content/drive/MyDrive/Voice/ADRESS021/'\n",
         "train_prog_tgz = os.path.join(data_path, 'ADRESS021-progression-train.tgz')\n",
         "test_prog_tgz = os.path.join(data_path, 'ADRESS021-progression-test.tgz')\n",
         "train_diag_tgz = os.path.join(data_path, 'ADRESS021-diagnosis-train.tgz')\n",
         "\n",
         "# Extract .tgz files\n",
         "extracted_path = '/content/adress021_data/'\n",
+        "os.makedirs(extracted_path, exist_ok=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5meKbIPly7Vc",
+        "outputId": "073d5aad-86d2-43b9-c95f-29f0dd226fa2"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tarfile\n",
+        "import glob\n",
+        "import os\n",
+        "\n",
+        "# Define file paths (update these to match your actual file locations)\n",
+        "train_prog_tgz = '/content/drive/MyDrive/Voice/ADRESS021/ADRESS021-progression-train.tgz'\n",
+        "test_prog_tgz = '/content/drive/MyDrive/Voice/ADRESS021/ADRESS021-progression-test.tgz'\n",
+        "train_diag_tgz = '/content/drive/MyDrive/Voice/ADRESS021/ADRESS021-diagnostic-train.tgz'\n",
+        "extracted_path = '/content/extracted_audio'  # Directory to extract files to\n",
+        "\n",
+        "# Ensure extracted_path exists\n",
         "os.makedirs(extracted_path, exist_ok=True)\n",
         "\n",
+        "# Function to extract .tgz files\n",
         "def extract_tgz(tgz_path, extract_to):\n",
-        "    with tarfile.open(tgz_path, 'r:gz') as tar:\n",
-        "        tar.extractall(path=extract_to)\n",
+        "    try:\n",
+        "        with tarfile.open(tgz_path, 'r:gz') as tar:\n",
+        "            tar.extractall(path=extract_to)\n",
+        "        print(f\"Successfully extracted {tgz_path} to {extract_to}\")\n",
+        "    except FileNotFoundError:\n",
+        "        print(f\"Error: File {tgz_path} not found.\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error extracting {tgz_path}: {str(e)}\")\n",
         "\n",
+        "# Extract each .tgz file\n",
         "for tgz in [train_prog_tgz, test_prog_tgz, train_diag_tgz]:\n",
-        "    extract_tgz(tgz, extracted_path)\n",
+        "    if os.path.exists(tgz):\n",
+        "        extract_tgz(tgz, extracted_path)\n",
+        "    else:\n",
+        "        print(f\"Skipping {tgz}: File does not exist.\")\n",
         "\n",
-        "# Find all WAV files (assuming audio files are in WAV format)\n",
+        "# Find all WAV files\n",
         "audio_files = glob.glob(os.path.join(extracted_path, '**/*.wav'), recursive=True)\n",
-        "print(f\"Found {len(audio_files)} audio files.\")\n",
-        "\n",
+        "print(f\"Found {len(audio_files)} audio files.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eqtU-txczugd",
+        "outputId": "909a4fba-475b-4e9c-a836-e293ab7b8b97"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Skipping /content/drive/MyDrive/Voice/ADRESS021/ADRESS021-progression-train.tgz: File does not exist.\n",
+            "Skipping /content/drive/MyDrive/Voice/ADRESS021/ADRESS021-progression-test.tgz: File does not exist.\n",
+            "Skipping /content/drive/MyDrive/Voice/ADRESS021/ADRESS021-diagnostic-train.tgz: File does not exist.\n",
+            "Found 0 audio files.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Load metadata (assuming there's a CSV or text file with labels)\n",
         "# Modify this based on actual metadata structure\n",
         "metadata_path = glob.glob(os.path.join(extracted_path, '**/*.csv'), recursive=True)\n",
@@ -90,8 +186,38 @@
         "    print(metadata.head())\n",
         "else:\n",
         "    metadata = pd.DataFrame({'file': audio_files, 'label': 'unknown'})\n",
-        "    print(\"No metadata CSV found. Using file paths only.\")\n",
-        "\n",
+        "    print(\"No metadata CSV found. Using file paths only.\")"
+      ],
+      "metadata": {
+        "id": "4Ureo4cpL8Au",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 356
+        },
+        "outputId": "680f4521-8d91-41f9-d62e-06e7ead916dc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: '/content/drive/MyDrive/Voice/ADRESS021/ADRESS021-progression-train.tgz'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-186eef6809c9>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtgz\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtrain_prog_tgz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_prog_tgz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_diag_tgz\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mextract_tgz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtgz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextracted_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Find all WAV files (assuming audio files are in WAV format)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-7-186eef6809c9>\u001b[0m in \u001b[0;36mextract_tgz\u001b[0;34m(tgz_path, extract_to)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mextract_tgz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtgz_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextract_to\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mtarfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtgz_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r:gz'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtar\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mtar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextractall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mextract_to\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtgz\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtrain_prog_tgz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_prog_tgz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_diag_tgz\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.11/tarfile.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(cls, name, mode, fileobj, bufsize, **kwargs)\u001b[0m\n\u001b[1;32m   1852\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1853\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mCompressionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"unknown compression type %r\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mcomptype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1854\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilemode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfileobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1855\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1856\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0;34m\"|\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.11/tarfile.py\u001b[0m in \u001b[0;36mgzopen\u001b[0;34m(cls, name, mode, fileobj, compresslevel, **kwargs)\u001b[0m\n\u001b[1;32m   1898\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1899\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1900\u001b[0;31m             \u001b[0mfileobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGzipFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"b\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompresslevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfileobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1901\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1902\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mfileobj\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.11/gzip.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, filename, mode, compresslevel, fileobj, mtime)\u001b[0m\n\u001b[1;32m    172\u001b[0m             \u001b[0mmode\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m'b'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    173\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfileobj\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 174\u001b[0;31m             \u001b[0mfileobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmyfileobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    175\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    176\u001b[0m             \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfileobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'name'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/MyDrive/Voice/ADRESS021/ADRESS021-progression-train.tgz'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Step 2: Visualize and Explore Dataset\n",
         "# Select a few sample audio files\n",
         "sample_files = audio_files[:3]\n",
@@ -129,8 +255,17 @@
         "    plt.savefig('/content/label_distribution.png')\n",
         "    plt.show()\n",
         "else:\n",
-        "    print(\"No label column found in metadata.\")\n",
-        "\n",
+        "    print(\"No label column found in metadata.\")"
+      ],
+      "metadata": {
+        "id": "VEzAzNABMAwh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Step 3: Preprocess Dataset\n",
         "processed_features = []\n",
         "output_dir = '/content/processed_features/'\n",
